--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new",
+  "name": "react-image-slider",
   "version": "1.0.0",
   "description":
     "https://medium.com/@ItsMeDannyZ/build-an-image-slider-with-react-es6-264368de68e4",
